# CAVeTalk

./: .gitignore  .gitmodules  CMakeLists.txt  Config-c.cmake.in  Config-common.cmake.in  Config-cpp.cmake.in  README.md
.github/actions/: action.yml
.github/actions/setup/: action.yml
.github/workflows/: action.yml  ci.yml  setup.yml
docs/: cppcheck.md  uncrustify.md
lib/c++/inc/: cave_talk.h
lib/c++/src/: cave_talk.cc
lib/c/inc/: cave_talk.h
lib/c/src/: cave_talk.c
lib/common/inc/: cave_talk_link.h  cave_talk_types.h
lib/common/src/: cave_talk_link.c
lib/inc/: cave_talk.h
lib/link_layer/inc/: cave_talk_link.h
lib/link_layer/src/: cave_talk_link.c
lib/src/: cave_talk.c
messages/: camera_movement.proto  config.proto  ids.proto  lights.proto  log.proto  mode.proto  movement.proto  odometry.proto  ooga_booga.proto
tests/: CMakeLists.txt
tests/c/: cave_talk_tests.cc
tests/c++/: cave_talk_tests.cc  link_layer_tests.cc  ring_buffer.h
tests/common/: common_tests.cc
tools/cppcheck/: cppcheck.cmake  suppressions.xml
tools/nanopb/: generate  generate.sh
